Adopt more features of Java 17 (#3169)