@@ -4,7 +4,6 @@ import org.junit.jupiter.api.Test;
 
 import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -25,81 +24,81 @@ class ClasspathSupportTest {
 
     @Test
     void determinePackageName() {
-        Path baseDir = Paths.get("path", "to", "com", "example", "app");
+        Path baseDir = Path.of("path", "to", "com", "example", "app");
         String basePackageName = "com.example.app";
-        Path classFile = Paths.get("path", "to", "com", "example", "app", "App.class");
+        Path classFile = Path.of("path", "to", "com", "example", "app", "App.class");
         String packageName = ClasspathSupport.determinePackageName(baseDir, basePackageName, classFile);
         assertEquals("com.example.app", packageName);
     }
 
     @Test
     void determinePackageNameFromRootPackage() {
-        Path baseDir = Paths.get("path", "to");
+        Path baseDir = Path.of("path", "to");
         String basePackageName = "";
-        Path classFile = Paths.get("path", "to", "com", "example", "app", "App.class");
+        Path classFile = Path.of("path", "to", "com", "example", "app", "App.class");
         String packageName = ClasspathSupport.determinePackageName(baseDir, basePackageName, classFile);
         assertEquals("com.example.app", packageName);
     }
 
     @Test
     void determinePackageNameFromComPackage() {
-        Path baseDir = Paths.get("path", "to", "com");
+        Path baseDir = Path.of("path", "to", "com");
         String basePackageName = "com";
-        Path classFile = Paths.get("path", "to", "com", "example", "app", "App.class");
+        Path classFile = Path.of("path", "to", "com", "example", "app", "App.class");
         String packageName = ClasspathSupport.determinePackageName(baseDir, basePackageName, classFile);
         assertEquals("com.example.app", packageName);
     }
 
     @Test
     void determineFullyQualifiedClassName() {
-        Path baseDir = Paths.get("path", "to", "com", "example", "app");
+        Path baseDir = Path.of("path", "to", "com", "example", "app");
         String basePackageName = "com.example.app";
-        Path classFile = Paths.get("path", "to", "com", "example", "app", "App.class");
+        Path classFile = Path.of("path", "to", "com", "example", "app", "App.class");
         String fqn = ClasspathSupport.determineFullyQualifiedClassName(baseDir, basePackageName, classFile);
         assertEquals("com.example.app.App", fqn);
     }
 
     @Test
     void determineFullyQualifiedClassNameFromRootPackage() {
-        Path baseDir = Paths.get("path", "to");
+        Path baseDir = Path.of("path", "to");
         String basePackageName = "";
-        Path classFile = Paths.get("path", "to", "com", "example", "app", "App.class");
+        Path classFile = Path.of("path", "to", "com", "example", "app", "App.class");
         String fqn = ClasspathSupport.determineFullyQualifiedClassName(baseDir, basePackageName, classFile);
         assertEquals("com.example.app.App", fqn);
     }
 
     @Test
     void determineFullyQualifiedClassNameFromComPackage() {
-        Path baseDir = Paths.get("path", "to", "com");
+        Path baseDir = Path.of("path", "to", "com");
         String basePackageName = "com";
-        Path classFile = Paths.get("path", "to", "com", "example", "app", "App.class");
+        Path classFile = Path.of("path", "to", "com", "example", "app", "App.class");
         String fqn = ClasspathSupport.determineFullyQualifiedClassName(baseDir, basePackageName, classFile);
         assertEquals("com.example.app.App", fqn);
     }
 
     @Test
     void determineFullyQualifiedResourceName() {
-        Path baseDir = Paths.get("path", "to", "com", "example", "app");
+        Path baseDir = Path.of("path", "to", "com", "example", "app");
         String basePackageName = "com/example/app";
-        Path resourceFile = Paths.get("path", "to", "com", "example", "app", "app.feature");
+        Path resourceFile = Path.of("path", "to", "com", "example", "app", "app.feature");
         URI fqn = ClasspathSupport.determineClasspathResourceUri(baseDir, basePackageName, resourceFile);
         assertEquals(URI.create("classpath:com/example/app/app.feature"), fqn);
     }
 
     @Test
     void determineFullyQualifiedResourceNameFromRootPackage() {
-        Path baseDir = Paths.get("path", "to");
+        Path baseDir = Path.of("path", "to");
         String basePackageName = "";
-        Path resourceFile = Paths.get("path", "to", "com", "example", "app", "app.feature");
+        Path resourceFile = Path.of("path", "to", "com", "example", "app", "app.feature");
         URI fqn = ClasspathSupport.determineClasspathResourceUri(baseDir, basePackageName, resourceFile);
         assertEquals(URI.create("classpath:com/example/app/app.feature"), fqn);
     }
 
     @Test
     void determineFullyQualifiedResourceNameFromComPackage() {
-        Path baseDir = Paths.get("path", "to", "com");
+        Path baseDir = Path.of("path", "to", "com");
         String basePackageName = "com";
-        Path resourceFile = Paths.get("path", "to", "com", "example", "app", "app.feature");
+        Path resourceFile = Path.of("path", "to", "com", "example", "app", "app.feature");
         URI fqn = ClasspathSupport.determineClasspathResourceUri(baseDir, basePackageName, resourceFile);
         assertEquals(URI.create("classpath:com/example/app/app.feature"), fqn);
     }
